# mcp-doctor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  features.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  client_adapter.md  new_rule.md
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  client-matrix.md  installation.md  releasing.md  research-notes.md  rule-index.md
src/agent_plugin_diagnostics/: cli.py
src/agent_plugin_diagnostics/checks/: base.py  static.py
src/agent_plugin_diagnostics/clients/: base.py  claude.py  claude_desktop.py  cline.py  codex.py  cursor.py  opencode.py  parsing.py  registry.py  roo.py  snippets.py  vscode.py  windsurf.py  zed.py
src/agent_plugin_diagnostics/core/: models.py  rules.py  utils.py  workflows.py
src/agent_plugin_diagnostics/fixers/: plans.py
src/agent_plugin_diagnostics/integrations/: __init__.py  apps.py
src/agent_plugin_diagnostics/mcp_server/: __main__.py  server.py
src/agent_plugin_diagnostics/probes/: protocol.py  remote.py  stdio.py
src/agent_plugin_diagnostics/reports/: renderers.py  serialization.py
tests/fixtures/: fake_mcp_server.py  fake_remote_mcp_server.py
tests/fixtures/claude/: .mcp.json
tests/fixtures/claude-desktop/AppData/Roaming/Claude/: claude_desktop_config.json
tests/fixtures/codex/.codex/: config.toml
tests/fixtures/cursor/.cursor/: mcp.json
tests/fixtures/opencode/: opencode.json
tests/fixtures/roo/.roo/: mcp.json
tests/fixtures/windsurf/.codeium/windsurf/: mcp_config.json
tests/fixtures/zed/.zed/: settings.json
tests/unit/: test_cli.py  test_discovery.py  test_fixers.py  test_integrations.py  test_probe.py  test_reports.py  test_snippets.py  test_static_checks.py
(+1 files in other folders)
